# SmartCalc

./: README.md
src/: Makefile  documentation.md
src/SmartCalcFront/: CMakeLists.txt  Calculator.cc  Calculator.h  Credit.cc  Credit.h  Deposit.cc  Deposit.h  DepositReport.cc  DepositReport.h  DifferCredit.cc  DifferCredit.h  Graph.cc  Graph.h  MainWindow.cc  MainWindow.h  main.cc
src/SmartCalcFront/qrc/: qrc.qrc  styles.css
src/backend/: bank.c  bank.h  calc.c  calc.h  parser.c  parser.h  types.c  types.h
src/tests/: run_tests.c
